Projet_GL/src/test/deca/syntax/invalid/unprovided/bad_float_hexa2.deca
// Ecriture float en hexa 2

3xcd.010p-11f
